--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -320,8 +320,12 @@
                 <h2>大家都在關注</h2>
                 <div id="issues" class="emfont-GenYoGothic">
                     <a href="/i/營養午餐" class="service">營養午餐</a>
-                    <a href="/i/監視器" class="service">監視器</a>
+                    <a href="/i/監視器" class="service">監視器全校無死角</a>
                     <a href="/i/八點上學" class="rule">八點上學</a>
+                    <a href="/i/早自修" class="rule">取消早自修</a>
+                    <a href="/i/電梯" class="rule">學生搭電梯</a>
+                    <a href="/i/增加公車班次" class="rule">增加公車班次</a>
+                    <a href="/i/增加公車班次" class="rule">增加公車班次</a>
                 </div>
             </section>
             <section>
