--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -7,12 +7,12 @@
                 <a href="/">學聲 EduVoice</a>
             </div>
             <ul>
-                <li><a href="https://eduvoice.emtech.cc">學校</a></li>
+                <li><a href="https://eduvoice.emtech.cc/s/262">學校</a></li>
                 <li>
-                    <a href="https://eduvoice.emtech.cc/rules">規定</a>
+                    <a href="https://eduvoice.emtech.cc/i/1">規定</a>
                 </li>
                 <li>
-                    <a href="https://eduvoice.emtech.cc/news">新聞</a>
+                    <a href="https://eduvoice.emtech.cc/#news">新聞</a>
                 </li>
                 <li>
                     <a href="https://eduvoice.emtech.cc/#daily">日報</a>
