--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -29,7 +29,7 @@
                 <ul>
                     <% rules.forEach(function(rule) { %>
                     <li>
-                        <a href="/p/<%= rule.id %>"> <%= rule.title %> </a>
+                        <a href="/i/<%= rule.id %>"> <%= rule.title %> </a>
                     </li>
                     <% }); %>
                 </ul>
