--- a/src/views/issue.ejs
+++ b/src/views/issue.ejs
@@ -4,7 +4,7 @@
 <html lang="zh-Hant">
     <head>
         <%- include("partials/meta") %>
-        <title>取消早自習 | 學聲 EduVoice</title>
+        <title>取消早自修 | 學聲 EduVoice</title>
         <style>
             main {
                 padding-top: 5rem;
@@ -12,7 +12,6 @@
             }
             .intro-container {
                 display: flex;
-                flex-wrap: wrap;
                 gap: 2rem;
             }
             .intro {
@@ -37,19 +36,20 @@
                 flex-grow: 1;
                 min-width: 14rem;
                 gap: 2rem;
+                line-height: 1.4;
             }
             .pie {
                 width: 10rem;
                 height: 10rem;
                 border-radius: 50%;
                 background: conic-gradient(
-                    #f00 0% 30%,
-                    #ff0 30% 60%,
-                    #0f0 60% 100%
+                    #f00 0% 10%,
+                    #ff0 10% 20%,
+                    #0f0 20% 100%
                 );
             }
             .reporting main {
-                filter: blur(5px) brightness(0.5) grayscale(1);
+                filter: blur(10px) brightness(0.1) grayscale(.5);
             }
 
             .report {
@@ -59,8 +59,10 @@
                 max-width: 600px;
                 width: 100%;
                 background: #fff;
+                padding: 3rem;
                 color: #000;
                 transform: translate(-50%, -50%);
+                border-radius: 2rem;
                 opacity: 0;
             }
             .reporting .report {
@@ -90,7 +92,7 @@
                 border-radius: 6rem;
                 margin-left: 0.5rem;
             }
-            .rule{
+            .rule {
                 background-color: red;
             }
             section {
@@ -106,7 +108,8 @@
             .confirm h2 {
                 margin-bottom: 1rem;
             }
-            .confirm button {
+            .confirm button,
+            .report button {
                 background-color: #0060df;
                 color: #fff;
                 outline: transparent;
@@ -119,6 +122,17 @@
                 cursor: pointer;
                 display: inline-block;
                 margin-right: 1rem;
+            }
+            .report input {
+                width: 100%;
+                padding: 1rem;
+                margin-bottom: 1rem;
+                border: 1px solid #ccc;
+                border-radius: 0.375rem;
+            }
+            .report label {
+                display: block;
+                margin-bottom: 0.5rem;
             }
             button:hover {
                 background-color: #0053c0;
@@ -146,6 +160,7 @@
             .school-status {
                 display: flex;
                 flex-wrap: wrap;
+                gap:2rem;
             }
             .school-status > div {
                 flex: 1;
@@ -156,6 +171,16 @@
             .school-status span {
                 text-align: right;
             }
+            .school-status a {
+                display: flex;  
+                justify-content: space-between;
+                padding: 1rem;
+                border-radius: 0.375rem;
+                background-color: #f0f0f0;
+                margin-bottom: 0.5rem;
+                text-decoration: none;
+                color: #000;
+            }
         </style>
     </head>
 
@@ -164,15 +189,17 @@
         <main>
             <section>
                 <h1>
-                    <!-- <%= Rules.title %> -->
-                    <span class="tag">法規</span><span class="tag rule">法規</span>
+                    取消早自修<span class="tag">校規</span
+                    ><span class="tag rule">法規</span>
                 </h1>
                 <p>50 間學校資料，200 次通報</p>
             </section>
             <section class="intro-container">
                 <div class="intro box">
                     <h2>議題簡介</h2>
-                    <!-- <p><%= Rules.title %></p> -->
+                    <p>
+                        台灣教育部於2024年宣布取消早自修，引發社會各界爭議。支持者認為此舉可減輕學生壓力，讓學生有更多休息時間；反對者則擔心學生學習時間不足，影響升學競爭力。此外，部分家長和學校擔心取消早自修會增加學校和家庭的管理負擔，需重新調整課程和生活安排。這項決定在教育界和家長群體中引發熱烈討論，反映出台灣教育改革過程中的挑戰和分歧。
+                    </p>
                 </div>
                 <div class="pie-chart box">
                     <h2>全台達成比例</h2>
@@ -192,10 +219,8 @@
             <section>
                 <div class="box confirm">
                     <div class="ask">
-                        <h2>
-                            <!-- <%= issueStatus %> -->
-                            目前<%= issueStatus %>此政策?</h2>
-                        <p>目前資料: 正在實施 | 不確定度: 30%</p>
+                        <h2>西苑高中「正在實施」此政策?</h2>
+                        <p>目前資料: 正在實施 | 統一性: 90%</p>
                         <button
                             onclick="document.body.classList.add('reported')"
                         >
@@ -215,20 +240,20 @@
             <section class="school-status">
                 <div>
                     <h2>已實施</h2>
-                    <a href="">市立西苑高中 <span>✅</span></a
-                    ><a href="">市立西苑高中 <span>✅</span></a
-                    ><a href="">市立西苑高中 <span>✅</span></a>
+                    <a href="">市立某某高中 <span>✅</span></a
+                    ><a href="">市立某某高中 <span>✅</span></a
+                    ><a href="">市立某某高中 <span>✅</span></a>
                 </div>
                 <div>
                     <h2>實驗階段</h2>
-                    <a href="">市立西苑高中 <span>🟡</span></a
-                    ><a href="">市立西苑高中 <span>🟡</span></a
-                    ><a href="">市立西苑高中 <span>🟡</span></a>
+                    <a href="">市立某某高中 <span>🟡</span></a
+                    ><a href="">市立某某高中 <span>🟡</span></a
+                    ><a href="">市立某某高中 <span>🟡</span></a>
                 </div>
                 <div>
                     <h2>未實施</h2>
-                    <a href="">市立西苑高中</a><a href="">市立西苑高中</a
-                    ><a href="">市立西苑高中</a>
+                    <a href="">市立某某高中 <span>❌</span></a><a href="">市立某某高中 <span>❌</span></a
+                    ><a href="">市立某某高中 <span>❌</span></a>
                 </div>
             </section>
         </main>
@@ -236,6 +261,7 @@
         <div class="report">
             <h2>回報現況</h2>
             <form>
+                <label for="">補充說明 (如登記不懲處)</label>
                 <input type="text" name="" id="" />
                 <button
                     onclick="document.body.classList.remove('reporting');document.body.classList.add('reported')"
