--- a/src/views/school.ejs
+++ b/src/views/school.ejs
@@ -12,7 +12,6 @@
             }
             .intro-container {
                 display: flex;
-                flex-wrap: wrap;
                 gap: 2rem;
             }
             .intro {
@@ -49,12 +48,43 @@
                     #0f0 60% 100%
                 );
             }
+            .pie.lol {
+                background: conic-gradient(
+                    rgb(163, 163, 163) 0% 10%,
+                    #ff0 10% 30%,
+                    #0f0 30% 100%
+                );
+            }
+
+            .school-status {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 2rem;
+            }
+            .school-status > div {
+                flex: 1;
+            }
+            .school-status h2 {
+                text-align: center;
+            }
+            .school-status span {
+                text-align: right;
+            }
+            .school-status a {
+                display: flex;
+                justify-content: space-between;
+                padding: 1rem;
+                border-radius: 0.375rem;
+                background-color: #f0f0f0;
+                margin-bottom: 0.5rem;
+                text-decoration: none;
+                color: #000;
+            }
         </style>
     </head>
 
     <body class="aemfont-GenWanMin">
-        <%- include ("partials/nav") %> header{ padding: 1rem; text-align:
-        center; }
+        <%- include ("partials/nav") %>
         <main>
             <section>
                 <h1>西苑高中</h1>
@@ -62,13 +92,15 @@
             </section>
             <section class="intro-container">
                 <div class="intro box">
-                    <h2>議題簡介</h2>
-                    <p>B</p>
+                    <h2>校園簡介</h2>
+                    <p>
+                        臺中市立西苑高級中學，簡稱西苑高中，為位於臺灣臺中市西屯區逢甲商圈附近的一所市立完全中學，創校於1970年。設有國中部、高中部及國中補校。
+                    </p>
                 </div>
                 <div class="pie-chart box">
                     <h2>遵守法規</h2>
                     <div class="pie-box">
-                        <div class="pie"></div>
+                        <div class="pie lol"></div>
                         <div>
                             <div class="green pie-square"></div>
                             已實施: 30% <br />
@@ -101,43 +133,29 @@
             <section class="school-status">
                 <div>
                     <h2>已實施</h2>
-                    <a href="">市立西苑高中 <span>✅</span></a
-                    ><a href="">市立西苑高中 <span>✅</span></a
-                    ><a href="">市立西苑高中 <span>✅</span></a>
+                    <a href="">決定是否參加第八節 <span>✅</span></a
+                    ><a href="">穿自己外套 <span>✅</span></a
+                    ><a href="">營養午餐 <span>✅</span></a>
+                    <a href="">圖書館 <span>✅</span></a>
+                    <a href="">福利社 <span>✅</span></a>
+                    <a href="">自主決定晚自習 <span>✅</span></a>
+                    <a href="">電腦借閱 <span>✅</span></a>
+                    <a href="">免費生理用品 <span>✅</span></a>
                 </div>
                 <div>
-                    <h2>實驗階段</h2>
-                    <a href="">市立西苑高中 <span>🟡</span></a
-                    ><a href="">市立西苑高中 <span>🟡</span></a
-                    ><a href="">市立西苑高中 <span>🟡</span></a>
+                    <h2>實驗階段 / 半開放</h2>
+                    <a href="">穿便服上學 <span>🟡</span></a
+                    ><a href="">上課使用手機 <span>🟡</span></a
+                    ><a href="">心理假 <span>🟡</span></a>
                 </div>
                 <div>
                     <h2>未實施</h2>
-                    <a href="">市立西苑高中</a><a href="">市立西苑高中</a
-                    ><a href="">市立西苑高中</a>
+                    <a href="">穿拖鞋上學 <span>❌</span></a
+                    ><a href="">校車 <span>❌</span></a
+                    ><a href="">市立某某高中 <span>❌</span></a>
                 </div>
             </section>
         </main>
-
-        <div class="report">
-            <h2>回報現況</h2>
-            <form>
-                <input type="text" name="" id="" />
-                <button
-                    onclick="document.body.classList.remove('reporting');document.body.classList.add('reported')"
-                >
-                    未實施</button
-                ><button
-                    onclick="document.body.classList.remove('reporting');document.body.classList.add('reported')"
-                >
-                    實驗階段</button
-                ><button
-                    onclick="document.body.classList.remove('reporting');document.body.classList.add('reported')"
-                >
-                    已實施
-                </button>
-            </form>
-        </div>
 
         <%- include("partials/footer") %>
     </body>
