Final Present Thank You SITCON!!
Co-authored-by: Each Chen <iach526526@gmail.com>

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,9 @@
                 flex-wrap: wrap;
                 gap: 1rem;
                 justify-content: center;
+                margin: auto;
                 margin-top: 2rem;
+                max-width: 40rem;
             }
 
             #issues > a {
@@ -324,8 +326,8 @@
                     <a href="/i/八點上學" class="rule">八點上學</a>
                     <a href="/i/早自修" class="rule">取消早自修</a>
                     <a href="/i/電梯" class="rule">學生搭電梯</a>
-                    <a href="/i/增加公車班次" class="rule">增加公車班次</a>
-                    <a href="/i/增加公車班次" class="rule">增加公車班次</a>
+                    <a href="/i/增加公車班次" class="rule">公車班次足夠</a>
+                    <a href="/i/增加公車班次" class="rule">YouBike</a>
                 </div>
             </section>
             <section>
@@ -356,7 +358,7 @@
                             </div>
                             <h3>SITCON 2024 舉辦中</h3>
                         </div>
-                        <div class="date">2024 年 6 月 19 日</div>
+                        <div class="date">2024 年 7  月  6 日</div>
                     </article>
                 </div>
             </section>
