--- a/src/views/school.ejs
+++ b/src/views/school.ejs
@@ -144,7 +144,7 @@
                 </div>
                 <div>
                     <h2>實驗階段 / 半開放</h2>
-                    <a href="">穿便服上學 <span>🟡</span></a
+                    <a onclick="alert('更新紀錄\n❌2023.1.1 糾察隊門口登記 (學生)\n🟡 2024.1.1 登記不懲處 (老師)')">穿便服上學 <span>🟡</span></a
                     ><a href="">上課使用手機 <span>🟡</span></a
                     ><a href="">心理假 <span>🟡</span></a>
                 </div>
