--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,7 +3,7 @@
         <div>
             <p>&copy; 2024 學聲 EduVoice</p>
             <p>學聲是 SITCON Hackathon 2024 孵化出的專案。</p>
-            <p>Made by <a href="https://elvismao.com">Elvis Mao</a> & <a href="">Each Chen</a>. Powered by <a href="https://font.emtech.cc/">emfont</a>.</p>
+            <p>Made by <a href="https://elvismao.com">Elvis Mao</a> & <a href="https://github.com/iach526526">Each Chen</a>. Powered by <a href="https://font.emtech.cc/">emfont</a>.</p>
         </div>
         <a href="https://github.com/Edit-Mr/EduVoice"
             ><img src="/static/img/github.svg" alt=""
