--- a/src/views/school.ejs
+++ b/src/views/school.ejs
@@ -4,7 +4,7 @@
 <html lang="zh-Hant">
     <head>
         <%- include("partials/meta") %>
-        <title><%= schoolData.name %> | 學聲 EduVoice</title>
+        <title><%= ruleData.name %> | 學聲 EduVoice</title>
         <style>
             main {
                 padding-top: 5rem;
@@ -133,26 +133,43 @@
             <section class="school-status">
                 <div>
                     <h2>已實施</h2>
-                    <a href="">決定是否參加第八節 <span>✅</span></a
-                    ><a href="">穿自己外套 <span>✅</span></a
-                    ><a href="">營養午餐 <span>✅</span></a>
-                    <a href="">圖書館 <span>✅</span></a>
-                    <a href="">福利社 <span>✅</span></a>
-                    <a href="">自主決定晚自習 <span>✅</span></a>
-                    <a href="">電腦借閱 <span>✅</span></a>
-                    <a href="">免費生理用品 <span>✅</span></a>
+                    <% if (ruleData && ruleData.length > 0) { %>
+                        
+                        <% ruleData.forEach(rule => { %>
+                                <% console.log(rule) %>
+                                <%if (rule.status == "O") { %>
+                                    <a href=""><%= rule.title %> <span>✅</span></a>
+                            <% }}); %>
+                    <% } else { %>
+                        <p>目前沒有資料</p>
+                    <% } %>
                 </div>
                 <div>
                     <h2>實驗階段 / 半開放</h2>
-                    <a onclick="alert('更新紀錄\n❌2023.1.1 糾察隊門口登記 (學生)\n🟡 2024.1.1 登記不懲處 (老師)')">穿便服上學 <span>🟡</span></a
-                    ><a href="">上課使用手機 <span>🟡</span></a
-                    ><a href="">心理假 <span>🟡</span></a>
+                    <% if (ruleData && ruleData.length > 0) { %>
+                        
+                        <% ruleData.forEach(rule => { %>
+                                <% console.log(rule) %>
+                                <%if (rule.status == "?") { %>
+                                    <a href=""><%= rule.title %> <span>🟡</span></a>
+                            <% }}); %>
+                    <% } else { %>
+                        <p>目前沒有資料</p>
+                    <% } %>
                 </div>
                 <div>
                     <h2>未實施</h2>
-                    <a href="">穿拖鞋上學 <span>❌</span></a
-                    ><a href="">校車 <span>❌</span></a
-                    ><a href="">市立某某高中 <span>❌</span></a>
+                    <% if (ruleData && ruleData.length > 0) { %>
+                        
+                        <% ruleData.forEach(rule => { %>
+                                <% console.log(rule) %>
+                                <%if (rule.status == "X") { %>
+                                    <a href=""><%= rule.title %> <span>❌</span></a>
+                                    <a onclick="alert('更新紀錄\n❌2023.1.1 糾察隊門口登記 (學生)\n🟡 2024.1.1 登記不懲處 (老師)')">穿便服上學 <span>🟡</span></a
+                            <% }}); %>
+                    <% } else { %>
+                        <p>目前沒有資料</p>
+                    <% } %>
                 </div>
             </section>
         </main>
