--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -15,7 +15,7 @@
         <main>
             <h1>建立新帳號</h1>
             <p>有朋自遠方來，不亦樂乎?</p>
-            <p class="error"><%= message %></p>
+            <p class="error"><%- message %></p>
             <form action="/register" method="post" id="registerForm">
                 <label for="email">個人電子郵件地址</label>
                 <input
