--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -19,7 +19,7 @@
             <form action="/register" method="post" id="registerForm">
                 <label for="email">個人電子郵件地址</label>
                 <input
-                    type="text"
+                    type="email"
                     id="email"
                     name="email"
                     placeholder="請輸入您的電子郵件地址"
