--- a/src/views/issue.ejs
+++ b/src/views/issue.ejs
@@ -219,7 +219,7 @@
             <section>
                 <div class="box confirm">
                     <div class="ask">
-                        <h2>西苑高中「正在實施」此政策?</h2>
+                        <h2>「正在實施」此政策?</h2>
                         <p>目前資料: 正在實施 | 統一性: 90%</p>
                         <button
                             onclick="document.body.classList.add('reported')"
