check login(not done)

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -15,7 +15,7 @@
         <main>
             <h1>請輸入密碼</h1>
             <p class="error"><%= message %></p>
-            <form action="/login" method="post">
+            <form action="/infoMatch" method="post">
                 <input
                     type="email"
                     id="email"
