sql issue tag attr

--- a/src/views/issue.ejs
+++ b/src/views/issue.ejs
@@ -4,7 +4,7 @@
 <html lang="zh-Hant">
     <head>
         <%- include("partials/meta") %>
-        <title>取消早自修 | 學聲 EduVoice</title>
+        <title><%= ruleDetail.title %> | 學聲 EduVoice</title>
         <style>
             main {
                 padding-top: 5rem;
